--- a/assets/style.css
+++ b/assets/style.css
@@ -40,17 +40,19 @@ main{
 
 header{
     width: 100%;
+    height: 110px;
     display: flex;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     position: fixed;
     top: 0;
+    z-index: 2;
     background-image: url(./img/background/header.jfif);
 }
 .div-logo{
-    width: 30%;
-    max-width: 300px;
+    width: 300px;
+    max-width: 50%;
 
     display: flex;
     align-items: center;
@@ -58,10 +60,12 @@ header{
 .div-logo h2{
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
+    width: 100%;
 }
 .div-logo p{
     font-weight:bold;
     color: white;
+    width: 100%;
 }
 .logo{
     width: 75px;
@@ -235,9 +239,13 @@ input{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
+        z-index: 2;
     }
-    main{
-        top: calc();
+    .div-logo{
+        width: 500px;
+    }
+    .div-logo div{
+        width: 100%;
     }
     .menu-label{
         display: flex;
@@ -252,12 +260,11 @@ input{
         top: 110px;
         left: 25%;
         right: 5%;
-        z-index: 5;
         padding: 10px;
         background-color: blue;
         gap: 20px;
         display: none;
-
+        background-image: url(./img/background/header.jfif);
         border:5px solid grey;
         border-top: 0px;
         border-radius: 0px 0px 10px 10px;
@@ -271,7 +278,12 @@ input{
         border-radius: 10px;
         font-size: 20px;
     }
-
+    .me-img{
+        width: 100%;
+    }
+    .me-text{
+        width: 100%;
+    }
 }
 
 
