--- a/assets/style.css
+++ b/assets/style.css
@@ -277,12 +277,30 @@ input{
         padding: 10px;
         border-radius: 10px;
         font-size: 20px;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        animation: animateBg 14s linear infinite;
+        background-image: linear-gradient(90deg,#71c66c,#ff8000,#db5779,#71c66c,#ff8000);
+        background-size: 400% 100%;
     }
     .me-img{
         width: 100%;
     }
     .me-text{
         width: 100%;
+    }
+    .me-text h1{
+        margin: 5px;
+    }
+    .me-text h2{
+        margin: 5px;
+    }
+    .me-text p {
+        margin: 5px
+    }
+    .me-tecnologias{
+        gap: 10px;
     }
 }
 
